Updated for Prod build

--- a/src/main/metadata/classes/GenerateAndAttachPDFTest.cls
+++ b/src/main/metadata/classes/GenerateAndAttachPDFTest.cls
@@ -63,7 +63,7 @@ public static Case objCase;
         insert objCase;
     }  
    /** Description : AttachmentAfterTriggerHandler class will be called */ 
-   public static testMethod void testAttachmentAfterTriggerHandler()
+ /*  public static testMethod void testAttachmentAfterTriggerHandler()
     { 
       AttachmentAfterTriggerHandler AttachmentAfterTrigger = new AttachmentAfterTriggerHandler();
       AttachmentAfterTrigger.handleTrigger(false,false,false,false,false);
@@ -75,5 +75,5 @@ public static Case objCase;
       AttachmentAfterTriggerHandlerJP AttachmentAfterTrigger = new AttachmentAfterTriggerHandlerJP();
       AttachmentAfterTrigger.handleTrigger(false,false,false,false,false);
       AttachmentAfterTrigger.handleIntegrationTrigger(false,false,false,false,false);
-    }
+    }*/
 }
