--- a/src/main/metadata-au/classes/AccountHelperTest.cls
+++ b/src/main/metadata-au/classes/AccountHelperTest.cls
@@ -3,6 +3,7 @@ public class AccountHelperTest
 {
    public static Id accPerson_RecordTypeId = Schema.SObjectType.Account.getRecordTypeInfosByName().get('Person Account').getRecordTypeId();
    public static String DealerRecordtypeid = Schema.SObjectType.Account.getRecordTypeInfosByName().get('Dealer').getRecordTypeId(); 
+   public static String comapnyRecordTypeId = Schema.SObjectType.Account.getRecordTypeInfosByName().get('Company').getRecordTypeId(); 
    public static Account personAcc;
     public static Account personAcc2;
     public static Account Dealer;
@@ -146,8 +147,128 @@ public class AccountHelperTest
        system.assertEquals(UserInfo.getName(), personAcc.SMS_Last_Modified_By__c);
        
    }
+  public static testMethod void group_MemberTest(){
+      createTestData();
+      system.runAs(usr){
+           Group groupObj = [Select Id,Name FROM Group where DeveloperName = 'MB_Financial_Services'];
+           
+           GroupMember groupMemberObj = new GroupMember(UserOrGroupId = UserInfo.getUserId() ,GroupId = groupObj .Id );
+           insert groupMemberObj ;
+           
+           Dealer = new Account(Dealer_Default_Flag__c=true,
+                                    Dealer_DMS_SR_Code__c='test code',
+                                    Status__c='xCustomer',
+                                    City__c='Beijing',
+                                    Phone = '180801010',
+                                    Name = 'test dealer1',       
+                                    Area_code__c = '010',
+                                    Business_Unit__c='Alliance',
+                                    ZipCode__c='000000',
+                                    RecordTypeId=DealerRecordtypeid);
+       
+         insert Dealer;
+         Dealer.ZipCode__c ='000100';
+         Dealer.Dealer_DMS_SR_Code__c ='50663';
+         update Dealer;
+         List<String> delarCodes = new List<String>();
+         delarCodes.add('50663');
+         AccountHelper accDealerObj = new AccountHelper();
+         AccountHelper.getDealerCountInfo(delarCodes);
+       }
+       
+  }
+  public static testMethod void CompanyAccountTest(){
+      
+      Test.startTest();
+          Account accountObj = new Account(Name = 'CompanyAccount',RecordTypeId = comapnyRecordTypeId,Email__c ='a@A.com');
+          insert accountObj;
+          List<Account> accList = new List<Account>();
+          accList.add(accountObj);
+          Map<Id,Account> oldMap = new Map<Id,Account>();
+          oldMap.put(accountObj.Id,accountObj);
+         
+          AccountHelper.auBefore_Insert_Update_Events(accList,oldMap,true,false);
+      Test.stopTest();
+      
+  }
   
-   
+   public static testMethod void PersonAccount()
+  {
+      createTestData();
+      Test.startTest();
+      User userObj =  [Select Id FROM User where Id =:UserInfo.getUserId()];
+         system.runAs(userObj ){
+           Group groupObj = [Select Id,Name FROM Group where DeveloperName = 'MB_Financial_Services'];
+           
+           GroupMember groupMemberObj = new GroupMember(UserOrGroupId = usr.Id ,GroupId = groupObj .Id );
+           insert groupMemberObj ;
+        
+          Map<Id,Account> oldMap = new Map<Id,Account>();
+          
+              Account accountObj = new Account(LastName= 'CompanyAccount',FirstName ='Hi',RecordTypeId = accPerson_RecordTypeId ,Email__c ='a@A.com',Salutation ='DRM MBFS',Company__c= Dealer.Id,Business_Unit__c ='Alliance');
+              insert accountObj ;
+              Map<Id,Account> accOldMap = new Map<Id,Account>();
+              Map<Id,Account> accNewMap = new Map<Id,Account>();
+              List<Account> accList = new List<Account>();
+              accList.add(accountObj);
+               accOldMap.put(accountObj.Id,accountObj);
+               
+              List<Account> oldList = new List<Account>();
+              Account accObjNew  = accountObj;
+              accObjNew.Business_Unit__c ='Allmakes';
+              update accObjNew ;
+              accNewMap.put(accObjNew.Id,accObjNew  );
+              oldList.add(accObjNew  );
+              AccountHelper.auBefore_Insert_Update_Events(accList,oldMap,true,false);
+              oldMap.put(accountObj.Id,accountObj);
+              AccountHelper.auBefore_Insert_Update_Events(accList,oldMap,false,true);
+              AccountHelper.trackUpdatHistoryForFsInfo(accountObj,accountObj);
+              //AccountHelper.auAfter_Insert_Update_Delete_Events()
+              AccountHelperCustom.auAfter_Insert_Update_Delete_Events(oldMap,oldMap,accList,accList,true,false,false);
+              AccountHelperCustom.auAfter_Insert_Update_Delete_Events(oldMap,oldMap,accList,accList,false,true,false);
+              AccountHelperCustom.auAfter_Insert_Update_Delete_Events(oldMap,oldMap,accList,accList,false,false,true);
+    //          AccountHelperCustom.auBefore_Insert_Update_Events(oldMap,oldMap,true,false);
+            //  AccountHelperCustom.auBefore_Insert_Update_Events(oldMap,oldMap,false,true);
+            AccountHelper.auAfter_Insert_Update_Delete_Events(accNewMap,accOldMap,oldList,accList,false,false,true);
+              
+          }
+      Test.stopTest();
+  }
+  public static void getVSCountInfoTest(){
+      createTestData();
+      Test.startTest();
+          List<Id> vehiclelst = new List<Id>();
+          vehiclelst.add(vRel.Id);
+          AccountHelper.getVSCountInfo(vehiclelst);
+      Test.stopTest();
+  }
+  public static void updatePCCVFieldGTest()
+  {
+      createTestData();
+      Test.startTest();
+      Map<String,Map<String,Date>> preRecords = new Map<String,Map<String,Date>>();
+      Map<String,Date> childMap = new Map<String,Date>();
+      childMap.put('PC',system.today());
+      preRecords.put('12345678901111111',childMap);
+      Map<Id,Map<String,Integer>> tempcount= new Map<Id,Map<String,Integer>>();
+      Map<String,Integer> tempcount1= new Map<String,Integer>();
+      tempcount1.put('PC',1);
+      tempcount.put(vehicles.Id,tempcount1);
+      AccountHelper.updatePCCVField(Dealer,'12345678901111111',preRecords,true,tempcount,tempcount);
+     // Account userInfo ,String vehicleGroup, Map<String ,Map<String,Date>> preRecords,boolean isCustomer,Map<Id, Map<String,Integer>> tempcount,Map<Id, Map<String,Integer>> tenureVehicle
+      Test.stopTest();
+  }
+  public static void coverauBefore_Insert_Update_EventsTest(){
+      createTestData();
+      Test.startTest();
+          List<Account> listAccounts = new List<Account>();
+          listAccounts.add(Dealer);
+          map<Id,Account> oldAccountMap = new map<Id,Account>();
+          oldAccountMap.put(Dealer.Id,Dealer);
+          AccountHelperCustom.auBefore_Insert_Update_Events(listAccounts,oldAccountMap,true,false);
+          //List<Account> listAccounts,map<Id,Account> oldAccountMap, boolean isInsert,boolean isUpdate
+      Test.stopTest();
+  }
     static void createTestData()
    {
        
@@ -158,7 +279,7 @@ public class AccountHelperTest
                                     Phone = '180801010',
                                     Name = 'test dealer1',       
                                     Area_code__c = '010',
-                                    
+                                    Business_Unit__c='Alliance',
                                     ZipCode__c='000000',
                                     RecordTypeId=DealerRecordtypeid);
        
@@ -260,10 +381,10 @@ public class AccountHelperTest
                                          FirstName = 'lai',
                                          LastName = 'sichao',
                                          Email = 'sichao.lai@nttdata.com',
-                                         EOC_Recipient_Type__c = '60 Days Primary',
+                                         EOC_Recipient_Type__c = '60 Days Primary',Salutation='DRM MBFS',
                                          Lead_Escalation_Recipient_Type__c='Immediate Notice',Dealer_Lead_Gate_Keeper__c=false);
           insert testContact;
-       
+      
        usr = new User(
             Username = System.now().millisecond() +math.random()+ '987654321test12345@test.com',
             FirstName = 'firstname',
@@ -279,6 +400,8 @@ public class AccountHelperTest
         );
        //usr.ContactId = testContact.id;   //Community license not available.
         insert usr;
+        
+        
    }
 
 }
