Modified Failed Test classes

--- a/src/main/metadata/classes/UtilCampaignTaskGenerationByVehicleTest.cls
+++ b/src/main/metadata/classes/UtilCampaignTaskGenerationByVehicleTest.cls
@@ -28,7 +28,7 @@ public with sharing class UtilCampaignTaskGenerationByVehicleTest {
                                     PersonMobilePhone='5879875698',
                                     Phone = '080801011',
                                     Area_Code__c = '010',            
-                                    lastName = 'Beijing XING Services Limited - Alpha Review',
+                                    lastName = 'Beijing XING Limited',
                                     ZipCode__c='1004324',
                                     Salutation='Brother',
                                     FirstName='TestName',Email__c='test@mbau.com',Email2__c = 'testemail2@test.com',Home_Phone_2__c = '098765413',
