Modified Failed Test classes

--- a/src/main/metadata/classes/VehicleRelLookingControllerTest.cls
+++ b/src/main/metadata/classes/VehicleRelLookingControllerTest.cls
@@ -17,7 +17,7 @@ public class VehicleRelLookingControllerTest {
         ID VRRecordTypeId = Schema.SObjectType.Vehicle_Relationship__c.getRecordTypeInfosByName().get('Vehicle Relationship Retail').getRecordTypeId();   
         Id accPerson_RecordTypeIdp = Schema.SObjectType.Account.getRecordTypeInfosByName().get('Person Account').getRecordTypeId();     // Person Account.
   
-        Account account1 = new Account(Dealer_Default_Flag__c=true,Dealer_DMS_SR_Code__c='Test_SR_Code1',City__c='Beijing',Phone = '080801010',Area_Code__c = '010',ZipCode__c='1003457',lastname =Beijing XING Limited', 'RecordTypeId=accPerson_RecordTypeIdp);
+        Account account1 = new Account(Dealer_Default_Flag__c=true,Dealer_DMS_SR_Code__c='Test_SR_Code1',City__c='Beijing',Phone = '080801010',Area_Code__c = '010',ZipCode__c='1003457',lastname = 'Beijing XING Limited',RecordTypeId=accPerson_RecordTypeIdp);
         insert account1;
         
         Contact conComplaint = new Contact(AccountId = dealer.Id, LastName = 'b', Phone = '1212313', email = 's@s.s', Dealer_Complaint_Gate_Keeper__c = true, Dealer_Presales__c = true);
