--- a/src/main/metadata-au/classes/TaskMassChangeActivateDeactiveTest.cls
+++ b/src/main/metadata-au/classes/TaskMassChangeActivateDeactiveTest.cls
@@ -45,8 +45,8 @@ public class TaskMassChangeActivateDeactiveTest {
         controller.task = task1;
         controller.Activate();
         controller.Deactivate();
-         usr = [select id, Active__c from User where id = :usr.id];
-        System.assertEquals(usr.Active__c, false);        
+         usr = [select id, Active_Permission_Set__c from User where id = :usr.id];
+        System.assertEquals(usr.Active_Permission_Set__c, false);        
         Test.stopTest();
         }
     }
@@ -57,7 +57,7 @@ public class TaskMassChangeActivateDeactiveTest {
         Id welcomeCallRT = Schema.SObjectType.Task.getRecordTypeInfosByName().get('Welcome Call').getRecordTypeId();
         Id paid = Schema.Sobjecttype.Account.getRecordTypeInfosByName().get('Person Account').getRecordTypeId();        
         User usr1 = UtilTestData.createUser('Remarketing Team Lead','Customer Retention');
-        usr1.Active__c=true;
+        usr1.Active_Permission_Set__c=true;
         update usr1;      
         system.runAs(usr1){
         Account personAccount1 = new Account(
@@ -77,7 +77,7 @@ public class TaskMassChangeActivateDeactiveTest {
         );
         insert task1;
         
-        User usr = [select id, Active__c from User where isActive = true limit 1];
+        User usr = [select id, Active_Permission_Set__c from User where isActive = true limit 1];
         system.debug('>>>> usr >>>'+usr);
         task1.ownerId = usr.id;
         update task1;
@@ -91,8 +91,8 @@ public class TaskMassChangeActivateDeactiveTest {
         controller.task = task1;
         controller.Deactivate(); 
         Test.stopTest();
-        usr = [select id, Active__c from User where id = :usr.id];
-        System.assertEquals(usr.Active__c, false); 
+        usr = [select id, Active_Permission_Set__c from User where id = :usr.id];
+        System.assertEquals(usr.Active_Permission_Set__c, false); 
         }
     }
 }
